Add content description for lock icon

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,7 @@
 
     <!-- Lock Screen -->
     <string name="lock_title">App Locked</string>
+    <string name="lock_description">App is locked</string>
     <string name="unlock">Unlock</string>
 
     <!-- Network List Screen -->
